fix(HamburgerMenu): revert back to use x:key Style for custom control

--- a/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/App.xaml
@@ -134,7 +134,7 @@
 
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
 
-        <Style TargetType="controls1:HamburgerMenu">
+        <Style x:Key="HamburgerMenuWithSearchTemplate" TargetType="controls1:HamburgerMenu">
             <Setter Property="HamburgerMenuTemplate">
                 <Setter.Value>
                     <DataTemplate>
