The loading control to default to not shown

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Loading/Loading.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Loading/Loading.xaml
@@ -12,6 +12,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="controls:Loading">
                     <Border x:Name="RootGrid" Background="{TemplateBinding Background}"
+                            Visibility="Collapsed" Opacity="0"
                             BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
