--- a/Microsoft.Toolkit.Uwp.UI.Controls/ScrollHeader/ScrollHeader.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/ScrollHeader/ScrollHeader.xaml
@@ -5,7 +5,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:ScrollHeader">
-                    <ScrollViewer>
+                    <ScrollViewer VerticalScrollBarVisibility="Hidden">
                         <ContentPresenter />
                     </ScrollViewer>
                 </ControlTemplate>
