--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuStyles.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Menu/MenuStyles.xaml
@@ -1,12 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
-    <Style TargetType="controls:Menu">
-        <Setter Property="Background" Value="{StaticResource Brush-Grey-01}" />
-    </Style>
+
     <Style x:Key="MenuHeaderButtonStyle"
            TargetType="Button">
-        <Setter Property="Background" Value="{StaticResource Brush-Grey-01}" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundTransparentBrush}" />
         <Setter Property="BorderThickness" Value="{ThemeResource ButtonBorderThemeThickness}" />
@@ -21,7 +18,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Grid x:Name="RootGrid"
-                          Background="{TemplateBinding Background}">
+                          Background="{StaticResource Brush-Grey-01}">
                         <ContentPresenter x:Name="ContentPresenter"
                                           Padding="{TemplateBinding Padding}"
                                           HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
